# mcp-server-play

./: .env.example  Cargo.toml  README.md  justfile
src/: main.rs
src/api/: mod.rs  time.rs  weather.rs
src/api/time/: response.rs
src/api/weather/: response.rs
src/models/: mod.rs  time.rs  weather.rs
